Fix spacing issue on hero section

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -45,6 +45,12 @@
   );
   interpolate-size: allow-keywords;
 }
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 body {
   display: grid;
   grid-template-rows: auto 1fr auto;
